# ghcjs-promise

./: .gitignore  LICENSE  README.md  ghcjs-promise.cabal  stack.yaml
src/Data/: Promise.hs
src/Data/JSVal/: Promise.hs
src/Data/JSVal/Typed/: Promise.hs
src/js/: promise_functions.js
