name:                ghcjs-promise
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ghcjs-promise#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Durán Pallarés
maintainer:          vwwv@correo.ugr.es
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Promise
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vwwv/ghcjs-promise
